btcspace.css
body {
	padding-top: 90px;
    padding-bottom: 90px;
    background: #efefef;
    color: black;   
}

.jumbotron h1, .jumbotron h2 {text-align: center;
font-family: 'Roboto', sans-serif;}

.jumbotron {
    background: white;   
    color: black;
    padding-top: 0px;
}

h2 {font-weight: 300;}

h3 {font-family: 'Roboto', sans-serif;}

button {color: black;}

.content {text-align: center;}

h4 {
    font-family: 'Lato';
    font-weight: 100;
}



.content {text-align: center;}

.intro {
    font-family: 'Lato', sans-serif;
    font-weight: 100;
}

.readmore {
    font-family: 'Roboto', sans-serif; 
    text-align: center;
    font-weight: 300;
}


.donations {
    font-size: 1.5rem;
    text-align: center;
    font-family: 'Roboto', sans-serif; 
    color: #c3c3c3;
}


/*Contact Page*/
.contact-icons {
    font-size: 5rem;
    display: block;
    text-align: center;
}

.contact-icons i {
    padding-left: 2rem;
    padding-right: 2rem;
}



/*
===============
$Transaction styling
===============
*/

.col-header {
    padding: 8px 10px;
    border-bottom: 1px solid #ddd;
    margin-bottom: 15px;
    display: inline-block;
    width: 100%;
}

.col-header div {
    float: left;
    word-wrap: break-word;
    padding: 0 8px;
}

.metadata {
    margin-left: calc(30% - 40px);
}

.transaction-ID {
    width: 30%;
    word-wrap: break-word;
    display: inline-block;
    text-align: left;
    border-right: 2px solid #979797;
}

.transaction-info {
    text-align: left;
    display: inline-block;
    vertical-align: top;
}

.transactions {
    list-style-type: none;
    padding: 0px;
}

.transactions li {
    background: white;
    color: black;
}

.transactions li div {
    padding: 3px;
}

section {
    border: 2px solid #979797;
    text-align: left;
}

input {
    color: black;
    outline: solid black thin;
    background: #f9f9f9;
}

::-webkit-input-placeholder {
    color: #bababa;
}

:-moz-placeholder {
    /* Firefox 18- */
    color: #bababa;
}

::-moz-placeholder {
    /* Firefox 19+ */
    color: #bababa;
}

:-ms-input-placeholder {
    color: #bababa;
}

.controls {
    text-align: center;
}

.controls h3 {
    text-align: center;
}

.explanation {
    text-align: left;
    color: grey;
}

input[type='checkbox'] {
    margin-top: 20px;
}

.active {
    height: 60px;
    background: #33c1f3;
}

.intro {
    font-family: 'Lato', sans-serif;
    font-weight: 100;
}

.readmore {
    font-family: 'Roboto', sans-serif; 
    text-align: center;
    font-weight: 300;
}


.donations {
    font-size: 1.5rem;
    text-align: center;
    font-family: 'Roboto', sans-serif; 
    color: #c3c3c3;
}

@media (min-width: 992px) {
    .controls {
        text-align: left;
    }
}

